tests/rune_literal_empty_bad.stderr
tests/rune_literal_empty_bad.sl:2:11: error: SL1014: empty rune literal
