tests/rune_literal_empty_bad.sl
// Verifies rune literal empty is rejected.
const x = ''
